tests/paczka1/fuzzy1/19564592.err
Error in line 3: Qy5 S204 16,7
Error in line 9: Qy5 A42 24,7
Error in line 13: Qy5 S959 211,M
Error in line 7: fPg1 S204 57,6
Error in line 15: fPg1 S329 54,9
Error in line 11: q8L2aiKQOI S204 72,1
Error in line 18: q8L2aiKQOI S329 48,3
Error in line 21: dq1 A42 21,5
Error in line 22: q8L2aiKQOI S204 11,9
Error in line 10: Qy5 S959 45,6
